# OPEN-ENV

./: .gitignore  API_KEYS_SETUP.md  DOCKER_GUIDE.md  Dockerfile  EVALUATION_REPORT.md  HF_README.md  LICENSE  MODEL_CARD.md  README.md  RUN_TEST.md  SECURITY_CHECKLIST.md  SPACE_README.md  SPACE_TRAIN_README.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  TESTING_GUIDE.md  TRAINING_LOG.txt  VALIDATION_REPORT.md  app.py  benchmark.py  colab_train.ipynb  dataset_builder.py  demo_script.py  deploy_github_to_hf.py  deploy_space_now.py  deploy_to_space.ps1  deploy_train_space.py  env.py  fixed_readme.md  inference.py  interactive_play.py  models.py  openenv.yaml  play_ui.html  plot_results.py  pyproject.toml  quick_test.ps1  quick_test_openrouter.ps1  requirements.txt  reward_functions.py  (+21 more)
results/: baseline_heuristic.json  baseline_random.json  trained_v2.json  trained_v2_quick.json
server/: app.py
temp_adapter/lora_adapter/: README.md  adapter_config.json
